# costs

./: .gitignore  CHANGELOG.md  README.md  TODO.md  ai_costs.csv  app.doql.less  goal.yaml  index.html  local.dev.txt  planfile.yaml  pyproject.toml
docs/: README.md
examples/: README.md
examples/01_basic_usage/: README.md  run.sh
examples/01_custom_pricing/: README.md  main.py  run.sh
examples/01_tokenizer_basic/: README.md  main.py  run.sh
examples/02_badge_generation/: README.md  run.sh
examples/02_custom_roi/: README.md  main.py  run.sh
examples/02_multi_model_cost/: README.md  main.py  run.sh
examples/03_batch_processing/: README.md  main.py  run.sh
examples/03_diff_estimation/: README.md  run.sh
examples/03_multi_repo/: README.md  main.py  run.sh
examples/04_cost_trends/: README.md  main.py  run.sh
examples/github-actions/: README.md  run.sh  workflow.yml
examples/gitlab-ci/: .gitlab-ci.yml  README.md  run.sh
examples/pre-commit-hook/: README.md  install.sh  pre-commit  run.sh
hooks/: pre-commit
project/: README.md  analysis.toon.yaml  calls.mmd  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  project.toon.yaml  prompt.txt  validation.toon.yaml
src/ai_cost_tracker/: __init__.py  cli.py  git_parser.py
src/costs/: __init__.py  calculator.py  cli.py  git_parser.py  metrics.py  models.py  reports.py  tokenizers.py
src/costs/reports/: __init__.py  badge.py  html.py  markdown.py
tests/: test_cost.py
